--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -7,6 +7,7 @@ on:
       - 'app.py'
       - 'youtube_viewer.py'
       - 'requirements.txt'
+      - '.github/workflows/backend.yml'
   pull_request:
     branches: [ main ]
 
@@ -28,10 +29,20 @@ jobs:
         pip install -r requirements.txt
         pip install uvicorn aiofiles
     
+    - name: Create required directories
+      run: |
+        mkdir -p static/css
+        mkdir -p templates
+        # Copy static files if they don't exist
+        [ -f static/css/style.css ] || cp static/css/style.css static/css/style.css || echo "No style.css found"
+        [ -f templates/index.html ] || cp templates/index.html templates/index.html || echo "No index.html found"
+    
     - name: Run tests
       run: |
         python -m pytest tests/ || echo "No tests found"
     
     - name: Run FastAPI Server
       run: |
-        python -m uvicorn app:app --host 0.0.0.0 --port 8000 
+        python -m uvicorn app:app --host 0.0.0.0 --port 8000 --reload
+      env:
+        PYTHONUNBUFFERED: 1 
