--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-fastapi==0.68.1
-uvicorn==0.15.0
-pydantic==1.8.2
-requests==2.26.0
-aiohttp==3.8.1
-jinja2==3.0.1
-python-multipart==0.0.5
-pytest==6.2.5
-tqdm==4.62.3
-beautifulsoup4==4.9.3
-lxml==4.9.1
-aiofiles==0.8.0
-mangum==0.17.0 
+fastapi
+uvicorn
+pydantic
+requests
+aiohttp
+jinja2
+python-multipart
+pytest
+tqdm
+beautifulsoup4
+lxml
+aiofiles
+mangum
