Refactor Netlify configuration and API endpoints for improved functionality
- Updated netlify.toml to enhance build commands and include necessary files for functions.
- Changed API endpoint paths in api.py to remove the '/api' prefix, simplifying access.
- Modified the handler for Netlify Functions to correctly process requests without the base path.
- Updated index.html to use the new API paths, ensuring proper communication with the backend.
- Improved error handling in API calls within the frontend script.

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,16 +1,22 @@
 [build]
   publish = "dist"
-  command = "pip install -r requirements.txt && mkdir -p dist && cp -r static dist/ && cp templates/index.html dist/index.html"
+  command = """
+    pip install -r requirements.txt &&
+    mkdir -p dist &&
+    cp -r static dist/ &&
+    cp templates/index.html dist/index.html
+  """
   functions = "netlify/functions"
 
 [functions]
-  node_bundler = "esbuild"
-  external_node_modules = ["uvicorn", "fastapi"]
+  directory = "netlify/functions"
+  included_files = ["youtube_viewer.py"]
 
 [[redirects]]
   from = "/api/*"
   to = "/.netlify/functions/api/:splat"
   status = 200
+  force = true
 
 [[redirects]]
   from = "/*"
