Refactor application for Netlify deployment and enhance error handling
- Added error handling middleware in app.py to manage HTTP exceptions.
- Updated netlify.toml to improve build commands and include necessary configurations for functions.
- Removed outdated GitHub Actions workflows for backend and frontend deployments.
- Updated README to reflect changes in deployment process and instructions for using Netlify.
- Modified API handler in api.py for compatibility with AWS Lambda.

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,6 @@
 [build]
   publish = "dist"
   command = """
-    pip install -r requirements.txt &&
     mkdir -p dist &&
     cp -r static dist/ &&
     cp templates/index.html dist/index.html
@@ -10,10 +9,14 @@
 
 [functions]
   directory = "netlify/functions"
+  node_bundler = "esbuild"
+  external_node_modules = ["@netlify/functions"]
+
+[functions.api]
   included_files = ["youtube_viewer.py"]
 
 [[redirects]]
-  from = "/api/*"
+  from = "/.netlify/functions/api/*"
   to = "/.netlify/functions/api/:splat"
   status = 200
   force = true
@@ -21,4 +24,7 @@
 [[redirects]]
   from = "/*"
   to = "/index.html"
-  status = 200 
+  status = 200
+
+[build.environment]
+  PYTHON_VERSION = "3.9" 
