Refactor Netlify configuration and update API paths for improved functionality
- Updated netlify.toml to include all Python files for functions and simplified API endpoint paths.
- Modified requirements.txt to downgrade fastapi and add python-multipart for compatibility.
- Enhanced Python path configuration in api/index.py for better project structure.
- Adjusted API base URL in index.html to align with new routing.

--- a/netlify.toml
+++ b/netlify.toml
@@ -13,18 +13,14 @@
   external_node_modules = ["@netlify/functions"]
 
 [functions.api]
-  included_files = ["youtube_viewer.py"]
+  included_files = ["*.py"]
 
 [[redirects]]
-  from = "/.netlify/functions/api/*"
+  from = "/api/*"
   to = "/.netlify/functions/api/:splat"
   status = 200
   force = true
 
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
-
 [build.environment]
-  PYTHON_VERSION = "3.9" 
+  PYTHON_VERSION = "3.9"
+  PYTHONPATH = "." 
