--- a/netlify/functions/requirements.txt
+++ b/netlify/functions/requirements.txt
@@ -1,5 +1,4 @@
-fastapi==0.68.1
+fastapi==0.68.0
 mangum==0.17.0
-pydantic==1.8.2
-requests==2.26.0
-aiohttp==3.8.1 
+pydantic==1.10.13
+python-multipart==0.0.6 
