Enhance Netlify configuration and API functionality
- Updated netlify.toml to include 'youtube_viewer.py' in function files and added a new redirect for root paths to serve index.html.
- Modified api.py to improve the AWS Lambda handler, adding error handling and CORS support.
- Refined error messages in index.html for better clarity and added automatic task updates every 5 seconds.

--- a/netlify.toml
+++ b/netlify.toml
@@ -13,13 +13,18 @@
   external_node_modules = ["@netlify/functions"]
 
 [functions.api]
-  included_files = ["*.py"]
+  included_files = ["*.py", "youtube_viewer.py"]
 
 [[redirects]]
   from = "/api/*"
-  to = "/.netlify/functions/api/:splat"
+  to = "/.netlify/functions/api"
   status = 200
   force = true
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
 
 [build.environment]
   PYTHON_VERSION = "3.9"
